<resources>
    <string name="app_name">Culinary Companion</string>
    <string name="app_logo_description">App Logo</string>
    <string name="btn_breakfast">Breakfast</string>
    <string name="btn_brunch">Brunch</string>
    <string name="btn_lunch">Lunch</string>
    <string name="btn_dinner">Dinner</string>
    <string name="btn_desserts">Desserts</string>
    <string name="btn_other">Other</string>
    <string name="app_title">Culinary Companion</string>
    <string name="add_new_recipe">Add New Recipe</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="ingredients">Ingredients</string>
    <string name="preparation_steps">Preparation Steps</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="recipe_title_sample">Spaghetti Bolognese</string>
</resources>
